--- a/.github/workflow/publish.yml
+++ b/.github/workflow/publish.yml
@@ -15,13 +15,13 @@ jobs:
           node-version: '16.x'
           registry-url: 'https://registry.npmjs.org'
       - name: Install dependencies    
-        run: npm ci
+        run: yarn install
 
       - name: Build
-        run: npm run build
+        run: yarn run build
 
      - name: Publish to npm
-        run: npm publish ./lib
+        run: yarn npm publish --access public 
 
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
