--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,27 +1,22 @@
-name: Publish Package to npmjs
+name: Publish package to GitHub Packages
 on:
-  push:
-    branches: 
-      -main
-
+  release:
+    types: [published]
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
       - uses: actions/checkout@v3
-      # Setup .npmrc file to publish to npm
+      # Setup .npmrc file to publish to GitHub Packages
       - uses: actions/setup-node@v3
         with:
           node-version: '16.x'
-          registry-url: 'https://registry.npmjs.org'
-      - name: Install dependencies    
-        run: yarn install
-
-      - name: Build
-        run: yarn run build
-
-     - name: Publish to npm
-        run: yarn npm publish --access public 
-
+          registry-url: 'https://npm.pkg.github.com'
+          # Defaults to the user or organization that owns the workflow file
+      - run: yarn install
+      - run: yarn npm publish --access public 
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
