--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,6 +18,6 @@ jobs:
           # Defaults to the user or organization that owns the workflow file
       - run: yarn install
       - run: yarn run build
-      - run: yarn npm publish 
+      - run: yarn publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
