--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,6 +18,7 @@ jobs:
           # Defaults to the user or organization that owns the workflow file
       - run: yarn install
       - run: yarn run build
+      - name: Set deployment token
+        run: yarn config set '//registry.npmjs.org/:_authToken' "${{ secrets.NPM_TOKEN }}"
       - run: yarn publish --access public
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        
