--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,5 +18,5 @@ jobs:
           # Defaults to the user or organization that owns the workflow file
       - run: yarn install
       - run: yarn run build
-      - run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+      - run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN_AUTH }}" > ~/.npmrc
       - run: yarn publish --access public
