--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,7 @@
                         node-version: 18
                         registry-url: https://registry.npmjs.org
                   - name: publish
-                    run: npm run build
-                  - run: npm publish --access public
+                    run: npm publish --access public
+                    working-directory: my-package
                     env:
                         NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
