--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,6 +15,6 @@
                         registry-url: https://registry.npmjs.org
                   - name: publish
                     run: npm publish --access public
-                    working-directory: my-package
+                    working-directory: src
                     env:
                         NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
